<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_display_bio"
            android:icon="@drawable/ic_menu_edit_bio"
            android:title="@string/your_bio" />
        <item
            android:id="@+id/nav_edit_bio"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_edit_bio" />
        <item
            android:id="@+id/nav_display_group"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/your_group" />
    </group>
</menu>