...
    <string name="card_games">Card games</string>
    <string name="board_games">Board games</string>
    <string name="ttrpgs">Tabletop role-playing games (TTRPGs)</string>
    <string name="war_games"> Wargames </string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="your_personal_bio">Your Personal Bio</string>
    <string name="bio_error_message_age_range">This is not a valid age</string>
    <string name="bio_error_message_empty_username">Please enter an username</string>
    <string name="your_bio">Your Bio</string>

    <string name="edit_search_preferences">Your preferences</string>
    <string name="age_range">Age range</string>
    <string name="city_preference">City</string>
    <string name="edit_search_profile">EDIT SEARCH PROFILE</string>
...
