<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <com.google.android.material.slider.RangeSlider
        android:id="@+id/search_profile_age_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:value="20"
        android:valueFrom="14"
        android:valueTo="99"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_profile_age_range_text"
        app:values="@array/rangeSliderValues" />

    <LinearLayout
        android:id="@+id/search_profile_checkboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_search_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/edit_search_preferences"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/search_profile_card_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_games"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/search_profile_board_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_games"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/search_profile_ttrpgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttrpgs"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/search_profile_war_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/war_games"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/search_profile_age_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_range"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_profile_checkboxes" />

    <EditText
        android:id="@+id/search_profile_city_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bio_hint_city"
        android:inputType="text"
        android:paddingBottom="16dp"
        android:selectAllOnFocus="true"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_profile_age_slider" />

    <TextView
        android:id="@+id/search_profile_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_profile_none_selected_error_msg"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/search_profile_city_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search_profile_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:text="@string/submit_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_profile_error_message" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_preference_list"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="70dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@id/search_profile_submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


</androidx.constraintlayout.widget.ConstraintLayout>